Fix read more link spacing in both usages

--- a/ckanext/dia_theme/less/dia_custom.less
+++ b/ckanext/dia_theme/less/dia_custom.less
@@ -1163,7 +1163,8 @@ aside.secondary {
   }
   .read-more {
     padding-top: 0;
-    padding-bottom: 0;
+    padding-bottom: 20px;
+    margin-bottom: 0;
   }
 }
 
